<resources>
    <string name="app_name">SalesApp</string>
    <string name="txb_username">Username</string>
    <string name="txb_email">Email</string>
    <string name="txb_password">Password</string>
    <string name="txb_confirmPassword">Confirm password</string>
    <string name="btn_confirm">Confirm</string>
    <string name="txv_signUp">Sign up</string>
    <string name="login">Login</string>
    <string name="signUp">Sign up</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="remindMe">Remind me</string>
    <string name="version">version 1.0</string>


    <!--principal page -->
    <string name="category">Category</string>
    <string name="searchBar">Search</string>
    <string name="cart">Cart</string>
    <string name="addCart">Add to cart</string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="AboutUs">About us</string>
    <string name="LoremIpsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="finishPurchase">Finish purchase</string>
    <string name="products_chosen_tittle">You chose next products:</string>
    <string name="location_confirmation">We will send it to you as soon as possible via mail to :</string>
    <string name="thanks">Thanks.</string>
    <string name="productDetails">Product details</string>
    <string name="shoppingCart">Shopping cart</string>
    <string name="empty">-</string>

    <string name="image">https://www.worldatlas.com/r/w728-h425-c728x425/upload/46/cb/e1/shutterstock-252338818.jpg</string>
    <string name="image1">https://previews.123rf.com/images/aiselin/aiselin1809/aiselin180900081/107486908-lots-of-fruits-strawberries-blueberries-mango-orange-grapefruit-banana-apple-grapes-kiwis-on-the-whi.jpg</string>
    <string name="image2">https://previews.123rf.com/images/cooperr007/cooperr0071711/cooperr007171100268/89193608-image-of-a-lot-of-fruits-and-vegetables-closeup.jpg</string>
</resources>
